--- a/piezasestatuahtml/pieza_estatua21.html
+++ b/piezasestatuahtml/pieza_estatua21.html
@@ -20,22 +20,42 @@
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
         <a href="../mis_fotos/estatuas/estatua21.jpeg" class="glightbox">
-          <img src="../mis_fotos/estatuas/estatua21.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 21" />
+          <img src="../mis_fotos/estatuas/estatua21.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Figura Bakota" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Bakota</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Figura estilizada con rostro plano y ovalado, ojos circulares, nariz alargada y cuello acanalado.
+
+El cuerpo forma un arco o rombo, con diseño geométrico abstracto.
+
+Base envuelta en fibras vegetales teñidas en tonos rojos y púrpuras, posiblemente para cubrir el receptáculo de reliquias.
+
+Superficie decorada con láminas de metal repujado, que reflejan luz y simbolizan poder espiritual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Colocado sobre cestas que contenían huesos de antepasados venerados.
+
+Utilizado en rituales funerarios y de protección familiar.
+
+Actúa como guardián del linaje, asegurando fertilidad, cohesión y continuidad espiritual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Los Bakota practican el culto a los ancestros como base de su organización social.
+
+El arte del mbulu-ngulu combina estética, espiritualidad y función protectora.
+
+Estas figuras fueron objeto de coleccionismo europeo desde el siglo XX, lo que ha generado debates sobre descontextualización y conservación.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera tallada, láminas de metal (latón, cobre), fibras vegetales</li>
+          <li><strong>Origen:</strong> Bakota (o Kota), Gabón</li>
+         <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
