--- a/piezasestatuahtml/pieza_estatua23.html
+++ b/piezasestatuahtml/pieza_estatua23.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pieza estatua 23</title>
+  <title>Pieza estatua 21</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Lightbox CSS y JS simple -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/css/glightbox.min.css" integrity="sha512-+KPZs1BTSa6l5vIk91jGJ6dW9UgVSpvGx1Xr2N7m9UTh3f97k2XoZTz2r6H5hVxZx52r6hPSNnD6bk6XkWPMig==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,45 +20,42 @@
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
         <a href="../mis_fotos/estatuas/estatua23.jpeg" class="glightbox">
-          <img src="../mis_fotos/estatuas/estatua23.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza estatua foto 23" />
+          <img src="../mis_fotos/estatuas/estatua23.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Figura Bakota" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Fetiche Ibibio</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
-        Los Ibibio son uno de los pueblos más antiguos del sureste de Nigeria, principalmente en el estado de Akwa Ibom y partes de Cross River.
-Son conocidos por:
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Figura Bakota</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Figura estilizada con rostro plano y ovalado, ojos circulares, nariz alargada y cuello acanalado.
 
-Su lengua ibibio, parte de la familia niger-congo.
+El cuerpo forma un arco o rombo, con diseño geométrico abstracto.
 
-Su cultura rica en máscaras, sociedades secretas y tradiciones orales.
+Base envuelta en fibras vegetales teñidas en tonos rojos y púrpuras, posiblemente para cubrir el receptáculo de reliquias.
 
-Su sistema tradicional de gobierno y roles comunitarios.
+Superficie decorada con láminas de metal repujado, que reflejan luz y simbolizan poder espiritual.
         </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
-        Los Ibibio utilizan objetos consagrados que se cree que:
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Colocado sobre cestas que contenían huesos de antepasados venerados.
 
-        Protegen al individuo o a la comunidad;
+Utilizado en rituales funerarios y de protección familiar.
 
-Alejan el mal;
-
-Traen buena fortuna;
-
-Sirven como medios de comunicación espiritual
+Actúa como guardián del linaje, asegurando fertilidad, cohesión y continuidad espiritual.
         </p>
-         <p class="text-lg leading-relaxed mb-4 text-gray-200"; style="text-align: justify;">
-        En los ritos ofrecían sacrificios cuyos restos como leche de vaca y sangre de pollo aparecen en la figura
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Los Bakota practican el culto a los ancestros como base de su organización social.
+
+El arte del mbulu-ngulu combina estética, espiritualidad y función protectora.
+
+Estas figuras fueron objeto de coleccionismo europeo desde el siglo XX, lo que ha generado debates sobre descontextualización y conservación.
         </p>
-
-
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Madera</li>
-          <li><strong>Origen:</strong>Nigeria</li>
-          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
+          <li><strong>Material:</strong> Madera tallada, láminas de metal (latón, cobre), fibras vegetales</li>
+          <li><strong>Origen:</strong> Bakota (o Kota), Gabón</li>
+         <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -67,9 +64,9 @@ Sirven como medios de comunicación espiritual
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/estatuas/estatua23_1.jpegestatua23.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua23_1.jpegestatua23.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 23_1" /></a>
-      <a href="mis_fotos/estatuas/estatua23_2.jpegestatua23.jpeg" class="glightbox"><img src="mis_fotos/estatuas/estatua23_2.jpegestatua23.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
-      <a href="mis_fotos/bronces/bronce1_4.jpegestatua23.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpegestatua23.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      <a href="../mis_fotos/estatuas/estatua23_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua23_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza estatua foto 21_1" /></a>
+      <a href="../mis_fotos/estatuas/estatua23_2.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua23_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
+      <a href="mis_fotos/bronces/bronce1_4.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
 
     <!-- Botón de volver -->
