--- a/piezasestatuahtml/pieza_estatua28.html
+++ b/piezasestatuahtml/pieza_estatua28.html
@@ -27,15 +27,19 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Fang</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Fang Bieri</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
-          Escultura tradicional del pueblo Fang, característico de la región de Gabón, Camerún y Guinea Ecuatorial. Tallada en madera, representa una figura humana en posición frontal y con expresión serena, rasgos habituales en las obras asociadas al culto de los antepasados Fang.
+          La escultura corresponde a una figura Fang Bieri, originaria de Gabón, Guinea Ecuatorial y Camerún. Estas esculturas están asociadas al culto Byeri (o Bieri), una práctica ancestral de veneración de reliquias familiares, especialmente cráneos, que se guardaban en cajas protegidas por estas figuras guardianas.
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
-          La pieza muestra la clásica estilización corporal de esta cultura, con cabeza prominente, rasgos geométricos en el rostro y un modelado sencillo pero cargado de carácter. Esta tipología suele vincularse a los receptáculos rituales del byeri, dedicados a honrar y proteger las reliquias familiares, así como a preservar la memoria de los antepasados dentro de la comunidad.
+          Los Fang son conocidos por su arte escultórico de gran fuerza simbólica y estilización formal.
+
+El Byeri es un culto de linaje que protege los restos de los antepasados, especialmente los cráneos, conservados en cajas de reliquias.
+
+Las figuras Bieri se colocaban sobre estas cajas como guardianes espirituales, mediadores entre los vivos y los muertos.
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
-          El acabado presenta pátina y desgaste natural, aportando autenticidad visual y un atractivo tono cálido en la madera. Obra ideal para coleccionistas y amantes del arte tribal africano, muy representativa del estilo Fang y de su profunda tradición espiritual.
+         Las esculturas Bieri no son retratos, sino contenedores de fuerza espiritual. Su forma estilizada transmite disciplina, contención y poder ritual. En danza o ceremonia, se activan mediante invocaciones, libaciones y cantos. En colecciones, son altamente valoradas por su pureza formal y profundidad simbólica, y han influido en artistas modernos como Picasso y Modigliani.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 40 cm de alto</li>
