--- a/piezasestatuahtml/pieza_estatua30.html
+++ b/piezasestatuahtml/pieza_estatua30.html
@@ -28,14 +28,29 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Yombè</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Figura ritual Yombé, originaria de la región del Bajo Congo (República del Congo y República Democrática del Congo). Los Yombé son parte del complejo cultural Kongo, y sus esculturas se distinguen por su expresividad, refinamiento técnico y fuerte carga simbólica.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Los Yombé son conocidos por sus esculturas de madera que representan figuras de poder, ancestros o jueces espirituales.
+
+Estas figuras suelen estar sentadas o de pie, con expresión solemne, ojos cerrados o semicerrados, y postura meditativa o autoritaria.
+
+Se utilizan en contextos de culto ancestral, justicia ritual y protección espiritual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Figura de culto doméstico o comunitario: Representa a un ancestro protector o juez espiritual.
+
+Elemento de altar: Se coloca en espacios sagrados para invocar protección, justicia o sabiduría.
+
+Símbolo de autoridad moral: Puede representar a un líder, sacerdote o espíritu guía.
+        </p>
+        
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
-          <li><strong>Origen:</strong> Etnia Kongo. Africa Central</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Región del Bajo Congo (República del Congo y República Democrática del Congo)</li>
+         <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
