--- a/piezasestatuahtml/pieza_estatua31.html
+++ b/piezasestatuahtml/pieza_estatua31.html
@@ -27,22 +27,33 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Bambara Mamanecu</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
-          La escultura Bambara que compartiste muestra una figura femenina completa en la parte inferior (cuerpo y cabeza), y sobre ella se eleva una segunda cabeza, creando una estructura vertical de gran carga simbólica.Los Bambara celebran la maternidad como principio vital y espiritual. Las figuras femeninas como la “Mamanecu” (nombre posiblemente derivado de maman écu, o madre protectora) encarnan la madre idealizada, protectora del linaje, transmisora de sabiduría y fuente de fertilidad.
-        </p>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
-          Figura femenina inferior: Representa la madre ancestral, fuente de fertilidad, nutrición y continuidad del linaje. Su cuerpo y rostro son el fundamento terrenal.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Telem Dogon</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;"> 
+La figura presenta un formato vertical alargado y estilizado, característico de la estética Dogon asociada a representaciones de la tradición Telem. El personaje principal se distingue por su postura rígida, con los brazos elevados sosteniendo un recipiente o cuenco. Los rasgos faciales son esquemáticos y profundamente incisos, con ojos almendrados, nariz recta y boca estrecha.
 
-Cabeza superior: Añadida sobre la primera, simboliza la dimensión espiritual o la sabiduría ancestral que guía a la mujer y su descendencia. Es un recurso visual para mostrar que la maternidad no es solo biológica, sino también espiritual.
+A mitad del cuerpo aparece una segunda cabeza o rostro tallado, un motivo frecuente en algunas esculturas atribuidas a influencias Telem o a reinterpretaciones Dogon posteriores, que sugiere un carácter ancestral, protector o simbólico. La base muestra pies estilizados separados, que permiten el equilibrio de la escultura.
+
         </p>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
-          En la cosmología Bambara, la mujer es el principio vital y la mediadora entre mundos. La doble cabeza refuerza la idea de que la maternidad no solo sostiene la vida física, sino que también conecta con los ancestros y el mundo invisible. Es una metáfora visual de la doble dimensión de la existencia: terrenal y espiritual.
+        Los Dogon conservan en su tradición escultórica la memoria del antiguo pueblo Telem, habitantes anteriores de la región. Muchas figuras atribuidas al estilo Telem son consideradas objetos arcaicos, asociadas a ritos de culto a los antepasados, protección comunitaria o prácticas chamánicas.
+
+Las esculturas Dogon/Telem pueden encontrarse en santuarios familiares, espacios rituales o grutas dentro los acantilados. Su función varía dependiendo del linaje, el sacerdote (hogon) y la cosmovisión local.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+        Los brazos levantados suelen asociarse con súplica, comunicación con el mundo espiritual o petición a las fuerzas sobrenaturales.
+
+El cuenco puede simbolizar abundancia, ofrenda o receptáculo espiritual.
+
+La segunda cabeza refuerza el sentido de duplicidad espiritual, ancestralidad o “visión doble” del mediador ritual.
+
+El cuerpo vertical y segmentado sugiere conexión entre mundo terrenal y mundo divino.
+
+Este tipo de figuras es frecuentemente interpretado como un intermediario o espíritu protector.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
-          <li><strong>Origen:</strong> Mali</li>
+          <li><strong>Origen:</strong> Meseta de Bandiagara, Mali, África Occidental</li>
           <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
