--- a/piezasmascarahtml/pieza_mascara1.html
+++ b/piezasmascarahtml/pieza_mascara1.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Baulé</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Esta máscara Baule presenta una composición sólida y equilibrada, con un rostro de volúmenes geométricos acentuados y un modelado frontal marcado. Los ojos almendrados, ligeramente abultados y semicírculos cerrados, transmiten un gesto de calma y contención. La forma alargada del rostro se complementa con una boca pequeña, cuidadosamente tallada, y una nariz prominente que domina el eje central.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Las máscaras Baule forman parte de un complejo sistema estético y espiritual asociado a danzas festivas, ceremonias agrarias, rituales de mediación comunitaria y representaciones Gbè y Mblo. Aunque los Baule no poseen sociedades secretas tan marcadas como otros pueblos vecinos, sus máscaras cumplen funciones fundamentales: armonizar la comunidad, canalizar fuerzas protectoras y encarnar entidades espirituales o personajes prestigiosos.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Este tipo de máscara podía utilizarse en representaciones públicas, procesiones y danzas, a menudo acompañada de trajes completos y música. Su objetivo era entretener, educar, apaciguar tensiones o invocar bendiciones para la comunidad.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera tallada</li>
+          <li><strong>Origen:</strong> Pueblo Baule, (Costa de Marfil)</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
