--- a/piezasmascarahtml/pieza_mascara2.html
+++ b/piezasmascarahtml/pieza_mascara2.html
@@ -27,15 +27,38 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Songye</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          La máscara Songye, también conocida como Kifwebe, es una de las expresiones más poderosas del arte ritual de la República Democrática del Congo. Se utiliza en ceremonias de control social, protección espiritual y transición iniciática.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Los Songye habitan el sureste de la República Democrática del Congo.
+
+Comparten raíces culturales con los Luba, aunque sus máscaras tienen un estilo más agresivo y abstracto.
+
+La palabra Kifwebe significa “máscara” en lengua songye; bifwebe es el plural.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Estrías talladas en espiral o líneas rectas: Representan energía, poder espiritual y conexión con el mundo invisible.
+
+Forma geométrica y abstracta: Nariz triangular, ojos rectangulares, boca cuadrada — diseño que intimida y transmite autoridad.
+
+Colores rituales:
+
+Blanco: pureza, espíritu benévolo.
+
+Rojo: poder, agresividad, protección.
+
+Negro: lo oculto, lo ancestral.
+
+Cresta superior (en máscaras masculinas): Simboliza fuerza, vigilancia y poder sobrenatural.
+Las máscaras Songye son consideradas instrumentos de poder espiritual. No se exhiben como arte decorativo, sino que se activan en danza, música y ritual. El tallado de estrías no es meramente estético: es un lenguaje visual codificado que comunica fuerza, vigilancia y presencia invisible.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 40 cm de alto</li>
+          <li><strong>Material:</strong> Madera tallada</li>
+          <li><strong>Origen:</strong> República Democrática del Congo</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
