--- a/piezasmascarahtml/pieza_mascara3.html
+++ b/piezasmascarahtml/pieza_mascara3.html
@@ -27,15 +27,42 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Ekoi</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+      Máscara de madera con rostro humano estilizado: ojos hundidos, nariz ancha, boca entreabierta con dientes tallados.
+
+Frente alta con cresta central, posiblemente representando peinado ritual o tocado.
+
+Superficie con pátina oscura y zonas rojizas, indicativas de uso ceremonial.
+
+Perforaciones laterales para fijación de fibras, tela o casco ritual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+      Las máscaras Ekoi suelen representar ancestros, espíritus tutelares o figuras míticas.
+
+La cresta central puede aludir a peinados tradicionales o a jerarquía espiritual.
+
+Los dientes tallados y la boca abierta evocan poder, vigilancia o capacidad de comunicación con lo invisible.
+Utilizadas en ceremonias de iniciación, funerales, juicios comunitarios y danzas de sociedades secretas como Ngbe.
+
+Actúan como mediadoras entre el mundo humano y el espiritual, canalizando protección, justicia o fertilidad.
+
+En algunas variantes, se colocan sobre cascos cubiertos de piel animal, lo que les confiere una apariencia viva.
+
+
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+      Los Ekoi poseen una tradición escultórica híbrida, donde la máscara es tanto objeto estético como entidad espiritual.
+
+Las sociedades secretas regulan su uso, transmisión y significado.
+
+El arte Ekoi combina técnica refinada, simbolismo profundo y función social.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera tallada</li>
+          <li><strong>Origen:</strong> Región de Cross River, frontera Nigeria-Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
