--- a/piezasmascarahtml/pieza_mascara12.html
+++ b/piezasmascarahtml/pieza_mascara12.html
@@ -27,23 +27,20 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Punu</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Marka (Bambara/Soninké)</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          Máscara africana tradicional del estilo Punu. Características:
-
-Rasgos faciales delicados y estilizados: Los ojos alargados y entrecerrados, la boca pequeña y los pómulos suaves son típicos de máscaras Punu de Gabón.
-
-Uso de colores claros y oscuros: La combinación de blanco (a menudo kaolín) y negro es característica de muchas máscaras ceremoniales africanas.
-
-Peinado alto y geométrico: El tocado o peinado alto y detallado es un elemento frecuente en máscaras de las etnias Punu y Chokwe.
-
-Diseño simbólico en la frente y las mejillas: Los motivos geométricos en la frente y las mejillas suelen tener un significado espiritual o social, asociado con la belleza y la sabiduría.
-
-En general, esta máscara probablemente proviene de Gabón o la región del Congo, y era utilizada en ceremonias de danza, rituales de iniciación o festivales relacionados con los ancestros.
+         La máscara Bambara Markha (o Marka) proviene de Malí y está asociada a sociedades iniciáticas que combinan elementos Bambara y Soninké. Se caracteriza por su estructura vertical, decoración metálica y función ritual en danzas de protección y enseñanza.
         </p>
 
          <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
-          
+          Los Marka son un subgrupo cultural vinculado a los Bambara, con influencias Soninké.
+
+Sus máscaras se utilizan en contextos de sociedades iniciáticas, especialmente en danzas de protección, justicia y transmisión de saberes.
+
+A diferencia de las máscaras Bambara más abstractas, las Marka se distinguen por su ornamentación metálica y su carácter más figurativo.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Las máscaras Marka son activadas en danza, acompañadas por música y canto. No son objetos decorativos, sino entidades vivas que transmiten fuerza espiritual. Su decoración metálica no es meramente estética: protege, identifica y consagra. En colecciones, destacan por su elegancia formal y su complejidad simbólica.
         </p>
       
         <ul class="list-disc pl-5 text-gray-200">
