--- a/piezasmascarahtml/pieza_mascara11.html
+++ b/piezasmascarahtml/pieza_mascara11.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Pendé</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Esta máscara Pende presenta un rostro alargado y sereno, caracterizado por párpados semicerrados, cejas negras arqueadas y labios prominentes en tono rojizo. La superficie está policromada en colores vibrantes: el cráneo en amarillo, el rostro en tonos claros y la base del cuello en azul con motivos geométricos oscuros. La combinación de líneas limpias y volúmenes suavemente modelados acentúa la expresión introspectiva de la pieza.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         En la tradición Pende, las máscaras cumplen un papel central en ceremonias de iniciación, danzas rituales y representaciones sociales. Se utilizan para encarnar espíritus, personajes de la comunidad o figuras simbólicas que transmiten enseñanzas morales y valores colectivos. La presencia de ojos cerrados sugiere un espíritu equilibrado o un personaje asociado al autocontrol y la sabiduría, elementos recurrentes en el imaginario ritual Pende.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Esta máscara probablemente formó parte de danzas y representaciones durante el rito de iniciación masculina (Mukanda) o en contextos de ceremonia pública. Su policromía y estilización permiten situarla dentro del repertorio escultórico característico del grupo Pende Central.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera tallada y policromada</li>
+          <li><strong>Origen:</strong> Suroeste de la Republica Democrática de Congo</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
