--- a/piezasmascarahtml/pieza_mascara13.html
+++ b/piezasmascarahtml/pieza_mascara13.html
@@ -27,15 +27,29 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara de metal Bambara</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Esta máscara metálica estilizada se atribuye al universo Bambara (Bamana) de Malí, aunque con una clara reinterpretación contemporánea. Los Bambara tradicionalmente trabajan en madera, pero en producciones modernas y artísticas, algunos talleres y escultores han comenzado a explorar el metal como medio para representar formas rituales con estética abstracta.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Rostro vertical y simétrico: Proporciones que transmiten solemnidad y espiritualidad.
+
+Ojos vacíos: Posible alusión a lo invisible, lo espiritual o lo introspectivo.
+
+Textura envejecida y pátina: Sugiere antigüedad o intención ritual.
+
+Diseño minimalista: Reducción de rasgos a lo esencial, con fuerte carga simbólica.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         Objeto de contemplación espiritual: Más que una máscara funcional, parece una escultura que invita a la reflexión sobre la identidad, la memoria o lo ancestral.
+
+Símbolo de presencia ritual: Aunque no usada en ceremonia, evoca el poder de las máscaras Bambara como mediadoras entre mundos.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 18 cm de alto</li>
+          <li><strong>Material:</strong> Metal</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
