--- a/piezasmascarahtml/pieza_mascara21.html
+++ b/piezasmascarahtml/pieza_mascara21.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Bambara (Bamana)</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Esta máscara Bambara se caracteriza por su forma vertical y alargada, coronada por dos volúmenes superpuestos que evocan un peinado o tocado ritual. La superficie está tallada en un estilo rústico y texturado, dejando visibles las huellas de herramienta sobre la madera. El rostro muestra rasgos simplificados y potentes: ojos perforados de forma rectangular, una nariz prominente y una boca marcada con dientes sugeridos mediante incisiones profundas. El conjunto transmite una presencia austera y arcaica, típica de ciertas tradiciones escultóricas Bambara orientadas a lo simbólico más que a la naturalidad.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Entre los Bambara, las máscaras desempeñan un papel esencial en sociedades iniciáticas como el Kore, el Ntomo y el Komò. Cada una de estas instituciones utiliza formas específicas de máscaras para transmitir conocimientos espirituales, proteger a la comunidad o guiar a los jóvenes en su proceso de formación moral y social. El estilo tosco, la fuerte geometría y la verticalidad son rasgos que remiten a máscaras vinculadas a funciones de fuerza, disciplina e instrucción ritual.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Su forma y rasgos permiten relacionarla con máscaras empleadas en danzas de iniciación masculina o en contextos de defensa espiritual de la comunidad. Durante estas ceremonias, el portador encarna un espíritu o principio moral cuya función es ordenar, proteger, instruir o sancionar. La presencia del tocado superior refuerza su naturaleza simbólica, indicando, en algunos casos, niveles de conocimiento o pertenencia dentro de la jerarquía ritual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 30 cm de alto</li>
+          <li><strong>Material:</strong> Madera tallada</li>
+          <li><strong>Origen:</strong> Región Centro-Sur de Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -44,8 +50,8 @@
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/mascaras/mascara21_1.jpeg" class="glightbox"><img src="mis_fotos/mascaras/mascara21_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 21" /></a>
-      <a href="mis_fotos/bronces/bronce21_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce21_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      <a href="../mis_fotos/mascaras/mascara21_1.jpeg" class="glightbox"><img src="../mis_fotos/mascaras/mascara21_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 21" /></a>
+      <a href="../mis_fotos/mascaras/mascara21_2.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce21_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
 
     <!-- Botón de volver -->
