--- a/piezasmascarahtml/pieza_mascara26.html
+++ b/piezasmascarahtml/pieza_mascara26.html
@@ -27,15 +27,63 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara-Casco Bicéfala Mamaneku (Bamana)</h2>
         <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+         La máscara presenta la morfología típica de las máscaras-casco Mamaneku, pero con un rasgo excepcional:
+✔ dos rostros opuestos, uno a cada lado del casco, conformando una estructura bicéfala.
+
+Cada rostro muestra características comunes del estilo Bamana:
+
+rostro alargado y geométrico
+
+nariz recta prominente
+
+ojos reducidos y estrechos
+
+boca mínima
+
+placas metálicas repujadas cubriendo mejillas, frente y zona nasal
+
+La parte superior de la máscara está segmentada en paneles decorados con pigmento rojo, rodeados por bordes metálicos repujados.
+La cresta superior presenta varias perforaciones donde se insertan pompones textiles, posiblemente añadidos con significado ritual.
+
+Toda la pieza forma una silueta poderosa y simétrica, con la bicéfalia enfatizando su equilibrio axial.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200">
+         Las máscaras Mamaneku están asociadas a sociedades iniciáticas y de poder dentro del mundo Bamana, especialmente:
+
+Komo
+
+Kono
+
+Kore
+
+Estas asociaciones cumplen funciones de:
+
+protección espiritual de la comunidad
+
+justicia y regulación social
+
+enseñanza moral y esotérica
+
+realización de ceremonias de iniciación
+
+En estas sociedades, las máscaras no son simples objetos: funcionan como seres espirituales activos, soportes de nyama, la energía vital.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200">
+         Portada sobre la cabeza acompañada de un traje de fibras.
+
+Activada mediante sacrificios, ungüentos y cargas simbólicas.
+
+Utilizada en ceremonias de iniciación, protección comunitaria, resolución de conflictos y rituales secretos.
+
+El metal repujado, los pigmentos y los pompones cumplen funciones simbólicas y “activadoras”.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera, metal y tejido</li>
+          <li><strong>Origen:</strong> Mali – África Occidental</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
