--- a/piezasmascarahtml/pieza_mascara28.html
+++ b/piezasmascarahtml/pieza_mascara28.html
@@ -58,7 +58,7 @@ Cresta central y elementos laterales: Posible alusión a peinado ritual, jerarqu
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
       <a href="../mis_fotos/mascaras/mascara28_1.jpeg" class="glightbox"><img src="../mis_fotos/mascaras/mascara28_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza mascara foto 28" /></a>
-      <a href="mis_fotos/bronces/bronce28_2.jpeg" class="glightbox"><img src="mis_fotos/bronces/bronce28_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
+      <a href="../mis_fotos/mascaras/mascara28_2.jpeg" class="glightbox"><img src="../mis_fotos/mascaras/mascara28_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
 
     <!-- Botón de volver -->
