--- a/piezasmascarahtml/pieza_mascara31.html
+++ b/piezasmascarahtml/pieza_mascara31.html
@@ -27,15 +27,21 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Fan (Guin)</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Esta máscara Fang presenta la forma alargada y estilizada característica de las producciones de este grupo. Tallada en madera y recubierta con una capa de pigmento blanco, exhibe un rostro estrecho y ovalado, surcado por una línea central vertical que divide simétricamente toda la pieza. Los ojos almendrados, entrecerrados y decorados con finas incisiones radiales, evocan un estado introspectivo o espiritual. La boca, pequeña y discretamente resaltada con pigmento rojizo, contrasta con el mentón puntiagudo. El peinado bipartito superior, pintado en negro, es típico de ciertas variantes regionales. El desgaste superficial y las zonas erosionadas indican manipulación ritual y una pátina establecida con el tiempo.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Las máscaras Fang se empleaban en ceremonias vinculadas al culto de los ancestros, en particular dentro del sistema del Byeri, donde se custodiaban los relicarios familiares y se invocaba la presencia espiritual de los antepasados. Estas máscaras servían para introducir momentos de equilibrio y purificación durante las ceremonias, así como para acompañar danzas que reforzaban la cohesión social, la justicia comunitaria y la transmisión de la memoria familiar.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Durante las danzas rituales, la máscara era utilizada para representar seres liminares, espíritus protectores o personajes encargados de mantener la armonía del grupo. Su aparente serenidad, reforzada por el blanco caolín —símbolo de pureza y conexión espiritual en muchas culturas de la región—, contribuía a crear un ambiente de solemnidad y respeto durante los actos comunitarios.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 40 cm de alto</li>
+          <li><strong>Material:</strong> Madera tallada, pigmentos naturales (blanco caolín, negro, rojo)</li>
+          <li><strong>Origen:</strong> Pueblo Fang, región de Guinea Ecuatorial / Gabón / sur de Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
