--- a/piezassastrehtml/pieza_sastre_6.html
+++ b/piezassastrehtml/pieza_sastre_6.html
@@ -27,15 +27,23 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Terracota Seyni Awa Kámara</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Escultura en terracota obra de Seyni Awa Camara, artista autodidacta de Casamance (Senegal), reconocida internacionalmente por sus figuras maternales, fantásticas y animistas modeladas directamente en barro.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Nacida en Oussouye en 1945, Seyni Camara pertenece a una tradición de mujeres alfareras, pero se emancipa del uso utilitario para crear un universo escultórico propio.
+
+Su obra se inscribe en la primera generación de la “École de Dakar”, aunque su estilo es completamente inclassable, entre lo mítico, lo onírico y lo espiritual
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Seyni Camara trabaja sin bocetos ni modelos, directamente con las manos, en una relación instintiva y casi mística con la tierra. Sus esculturas han sido expuestas en el Centre Pompidou (1989) y la Bienal de Venecia (2001), y forman parte de colecciones privadas y museos en Europa y África. Su obra es celebrada por su poesía visual, fuerza simbólica y originalidad radical.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Terracota</li>
+          <li><strong>Origen:</strong> Senegal Contemporáneo</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
