--- a/piezasbroncehtml/pieza_bronce16.html
+++ b/piezasbroncehtml/pieza_bronce16.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/bronces/bronce16.jpeg" class="glightbox">
-          <img src="../mis_fotos/bronces/bronce16.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
+        <a href="../mis_fotos/bronces/bronce16.png" class="glightbox">
+          <img src="../mis_fotos/bronces/bronce16.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
         </a>
       </div>
 
