--- a/piezasbroncehtml/pieza_bronce14.html
+++ b/piezasbroncehtml/pieza_bronce14.html
@@ -67,7 +67,7 @@ También puede aludir a la jerarquía social o a la figura del hogon (sacerdote 
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/bronces/bronce14_1.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce14_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
+      <a href="../mis_fotos/bronces/bronce14_1.png" class="glightbox"><img src="../mis_fotos/bronces/bronce14_1.png" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
       <a href="mis_fotos/bronces/bronce1_3.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_3.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
       <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
