--- a/piezasbroncehtml/pieza_bronce25.html
+++ b/piezasbroncehtml/pieza_bronce25.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/bronces/bronce25.jpg" class="glightbox">
-          <img src="../mis_fotos/bronces/bronce25.jpg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
+        <a href="../mis_fotos/bronces/bronce25.png" class="glightbox">
+          <img src="../mis_fotos/bronces/bronce25.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
         </a>
       </div>
 
@@ -64,7 +64,7 @@ Las campanas con figuras eran signos de prestigio, autoridad y conexión con los
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-        <a href="../mis_fotos/bronces/bronce25_1.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce25_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
+        <a href="../mis_fotos/bronces/bronce25_1.png" class="glightbox"><img src="../mis_fotos/bronces/bronce25_1.png" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
         <a href="../mis_fotos/bronces/bronce25_2.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce25_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
         <a href="../mis_fotos/bronces/bronce25_3.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce25_3.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
 
