--- a/piezascascohtml/pieza_casco1.html
+++ b/piezascascohtml/pieza_casco1.html
@@ -55,7 +55,7 @@ Pátina ritual: Superficie desgastada que indica uso ceremonial o envejecimiento
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="mis_fotos/cascos/casco1_1.jpeg" class="glightbox"><img src="mis_fotos/cascos/cascos1_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
+      <a href="../mis_fotos/cascos/casco1_1.jpeg" class="glightbox"><img src="../mis_fotos/cascos/casco1_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
       <a href="mis_fotos/cascos/casco1_2.jpeg" class="glightbox"><img src="mis_fotos/cascos/casco1_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
       
     </div>
