--- a/piezascascohtml/pieza_casco5.html
+++ b/piezascascohtml/pieza_casco5.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/cascos/casco5.jpeg" class="glightbox">
-          <img src="../mis_fotos/cascos/casco5.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce foto 1" />
+        <a href="../mis_fotos/cascos/casco5.png" class="glightbox">
+          <img src="../mis_fotos/cascos/casco5.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce foto 1" />
         </a>
       </div>
 
@@ -58,7 +58,7 @@ Elemento de danza y teatro ritual: A menudo se acompaña de marionetas y narraci
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/cascos/casco5_1.jpeg" class="glightbox"><img src="../mis_fotos/cascos/casco5_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
+      <a href="../mis_fotos/cascos/casco5_1.png" class="glightbox"><img src="../mis_fotos/cascos/casco5_1.png" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
       <a href="../mis_fotos/cascos/casco5_2.jpeg" class="glightbox"><img src="../mis_fotos/cascos/casco5_2.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
       
     </div>
