--- a/piezasestatuahtml/pieza_estatua2.html
+++ b/piezasestatuahtml/pieza_estatua2.html
@@ -19,8 +19,8 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/estatuas/estatua2.jpeg" class="glightbox">
-          <img src="../mis_fotos/estatuas/estatua2.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce foto 1" />
+        <a href="../mis_fotos/estatuas/estatua2.png" class="glightbox">
+          <img src="../mis_fotos/estatuas/estatua2.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce foto 1" />
         </a>
       </div>
 
@@ -58,7 +58,7 @@ Textura desgastada y grietas visibles: Indican antigüedad o uso ritual prolonga
     <!-- Galería adicional con lightbox -->
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
-      <a href="../mis_fotos/estatuas/estatua2_1.jpeg" class="glightbox"><img src="../mis_fotos/estatuas/estatua2_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
+      <a href="../mis_fotos/estatuas/estatua2_1.png" class="glightbox"><img src="../mis_fotos/estatuas/estatua2_1.png" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
       
     </div>
 
